# bazel-cwd

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  run_test.sh
.github/workflows/: checks.yml
src/: lib.rs  test_bin.rs
