[package]
name = "bazel-cwd"
description = "Get the current working directory in a Bazel-aware manner"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kesyog/bazel-cwd"
keywords = ["bazel", "path", "directory"]
exclude = [
  "src/test_bin.rs",
  "**/*.bazel",
  "run_test.sh",
]

[dependencies]
